[tool.poetry]
name = "tapo-camera"
version = "0.1.0"
description = ""
authors = ["jp-0 <40854515+jp-0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.*"
requests = "^2.31.0"
pycryptodome = "^3.19.1"
click = "^8.1.7"
pytz = "^2023.3.post1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
